deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-random-app
  labels:
    app: flask-random-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-random-app
  template:
    metadata:
      labels:
        app: flask-random-app
    spec:
      containers:
        - name: flask
          image: image-registry.openshift-image-registry.svc:5000/flask-random-app1/flask-random-image:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
