flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-random-service
spec:
  selector:
    app: flask-random
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
