service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-random-svc
spec:
  selector:
    app: flask-random-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
