route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-random-route
spec:
  to:
    kind: Service
    name: flask-random-svc
  port:
    targetPort: 8080
